--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://sql.freedb.tech:3306/freedb_centralSync
-spring.datasource.username=freedb_maleesha
-spring.datasource.password=!YMhhVb@5#n6Jfy
+spring.datasource.url=jdbc:mysql://localhost:3306/centralsyncdb
+spring.datasource.username=root
+spring.datasource.password=#CSinventry2024
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
