--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/centralsyncdb
+spring.datasource.url=jdbc:mysql://localhost:3306/CentralSync
 spring.datasource.username=root
-spring.datasource.password=#CSinventry2024
+spring.datasource.password=123458
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
