--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
 			<artifactId>javax.mail</artifactId>
 			<version>1.6.2</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>javax.mail-api</artifactId>
+			<version>1.6.2</version> <!-- or the latest version -->
+		</dependency>
+
 
 
 
