--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,20 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:mysql://centralsyncdb.mysql.database.azure.com/centralSyncdb
-spring.datasource.username=inventoryManager
-spring.datasource.password=db123*CentralSync
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+
+#spring.security.user.name=Maleesha
+#spring.security.user.password=1234
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/centralSyncdb
+spring.datasource.username=root
+spring.datasource.password=#CSinventry2024
+
+#spring.datasource.url=jdbc:mysql://centralsyncdb.mysql.database.azure.com/centralSyncdb
+#spring.datasource.username=inventoryManager
+#spring.datasource.password=db123*CentralSync
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
