Add validation groups

--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.passay</groupId>
+			<artifactId>passay</artifactId>
+			<version>1.6.0</version>
+		</dependency>
 
 	</dependencies>
 
