--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,13 +9,13 @@ logging.level.org.hibernate.type=TRACE
 #spring.security.user.password=1234
 
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/centralSyncdb
-#spring.datasource.username=root
-#spring.datasource.password=#CSinventry2024
+spring.datasource.url=jdbc:mysql://localhost:3306/centralSyncdb
+spring.datasource.username=root
+spring.datasource.password=#CSinventry2024
 
-spring.datasource.url=jdbc:mysql://centralsyncdb.mysql.database.azure.com/centralSyncdb
-spring.datasource.username=inventoryManager
-spring.datasource.password=db123*CentralSync
+#spring.datasource.url=jdbc:mysql://centralsyncdb.mysql.database.azure.com/centralSyncdb
+#spring.datasource.username=inventoryManager
+#spring.datasource.password=db123*CentralSync
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
