--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.mail.username=centralsync2024@gmail.com
 spring.mail.password=hwtuxlicudlwhedd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
