--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:mysql://centralsyncdb.mysql.database.azure.com/centralSyncdb
+spring.datasource.url=jdbc:mysql://centralsyncdatabase.mysql.database.azure.com/centralsyncdatabase
 spring.datasource.username=inventoryManager
 spring.datasource.password=db123*CentralSync
 
