User Id foreign key added to the InventoryRequest field

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,10 @@ spring.datasource.url=jdbc:mysql://centralsyncdatabase.mysql.database.azure.com/
 spring.datasource.username=inventoryManager
 spring.datasource.password=db123*CentralSync
 
+#spring.datasource.url=jdbc:mysql://localhost:3306/centralSyncdb
+#spring.datasource.username=root
+#spring.datasource.password=#CSinventry2024
+
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
