--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,12 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext7-core</artifactId>
+            <version>7.1.13</version>
+        </dependency>
+
 
     </dependencies>
 
