--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,10 @@
             <version>7.1.13</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
 
     </dependencies>
 
