--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,10 @@
             <artifactId>itext7-core</artifactId>
             <version>7.1.17</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
 
     </dependencies>
 
