--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 
-spring.datasource.url=jdbc:mysql://centralsyncdatabase.mysql.database.azure.com/centralsyncdatabase
-spring.datasource.username=inventoryManager
-spring.datasource.password=db123*CentralSync
+#spring.datasource.url=jdbc:mysql://centralsyncdatabase.mysql.database.azure.com/centralsyncdatabase
+#spring.datasource.username=inventoryManager
+#spring.datasource.password=db123*CentralSync
+
+spring.datasource.url=jdbc:mysql://localhost:3306/centralSyncdb
+spring.datasource.username=root
+spring.datasource.password=#CSinventry2024
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -27,6 +31,9 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
+
+
+
 
 
 
